# loud-mouth-tauri

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_NOTES.md  LICENSE  PRD.md  README.md  Todo.md  Todo_old.md  clear-app-cache.sh  description.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
coverage/: coverage-final.json  index.html
coverage/loud-mouth-tauri/: index.html  vite.config.ts.html  vitest.config.ts.html
src/: App.tsx  app.css  index.css  main.tsx  tailwind.config.js
src-tauri/: .gitignore  Cargo.toml  ERROR_TESTING_GUIDE.md  ERROR_TESTING_QUICK_START.md  Info.plist  VOSK_SETUP.md  build.rs  database.sqlite  database.sqlite-shm  database.sqlite-wal  download-vosk-libs.sh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/test.icon/: icon.json
src-tauri/migrations/2023001_create_users/: up.sql
src-tauri/migrations/2025-07-01-032702_create_user_profiles_and_settings/: down.sql  up.sql
src-tauri/migrations/2025-07-05-052640_create_videos_and_file_integrity_tables/: down.sql  up.sql
src-tauri/src/: database.rs  error.rs  error_tests.rs  lib.rs  main.rs  schema.rs  thumbnail.rs
src-tauri/src/commands/: mod.rs  speech.rs  tests.rs  video.rs  video_progress.rs  vocabulary.rs
src-tauri/src/models/: mod.rs  video_progress.rs  vocabulary.rs
src/api/: speech.ts  video-progress.ts  vocabulary.ts
src/components/: AuthProvider.tsx  LanguageProvider.tsx  StudyTimeProvider.tsx  SupabaseAuthProvider.tsx  error-boundary.test.tsx  error-boundary.tsx  section-error-boundary.test.tsx  (+1 more)
src/lib/: i18n.ts  (+2 more)
(+149 files in other folders)
