[package]
name = "loud-mouth"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "loud-mouth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loud_mouth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1"
r2d2 = "0.8"
libsqlite3-sys = { version = "0.27", features = ["bundled"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
tokio = { version = "1", features = ["process"] }
image = "0.24"
percent-encoding = "2.3"
base64 = "0.21"
whisper-rs = "0.11"
hound = "3.5"
reqwest = { version = "0.11", features = ["stream", "blocking"] }
futures-util = "0.3"
zip = "0.6"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"

